fix: Adjust paginator styles for better responsiveness on small screens

--- a/src/styles/paginator.module.css
+++ b/src/styles/paginator.module.css
@@ -80,15 +80,15 @@
 
 @media(max-width: 440px) {
     .container {
-        width: 100%;
+        max-width: 100%;
         gap: .4rem;
     }
 
     .page {
         font-size: 1rem;
         aspect-ratio: 1;
-        width: 100%;
-        height: 100%;
+        width: 1rem;
+        height: 1rem;
     }
 
     .arrow_left {
